--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -6,16 +6,20 @@
     color: #FFBD00;
 }
 
-.register {
+.button {
     background: none;
-    border: 1px solid #FFBD00;
     border-radius: 25px;
-    height: 50px;
+    height: 40px;
     width: 170px;
+    font-size: 12px;
+    font-weight: lighter;
+    font-family: Arial, Helvetica, sans-serif;
+    letter-spacing: 3px
+}
+
+.register {
+    border: 1px solid #FFBD00;
     background-color: #FFBD00;
-    font-size: 15px;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif
 }
 
 .register:hover{
@@ -28,16 +32,104 @@
     font-size: 20px;
     background: none;
     border: none;
+    padding-left: 15px;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding: 20px 50px;
+
 }
 
 .header-left {
     display: flex;
+}
+
+.header-right {
+    display: flex;
+    align-items: center;
+}
+
+.hero {
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+}
+
+.content-body {
+    text-align: left;
+    padding-left: 100px;
+    width:100%;
+}
+
+.comp {
+    height: 350px;
+    position: relative;
+    left: 150px;
+    padding-top: 50px; 
+}
+
+.demo {
+    border: 1px solid #565761;
+    background-color: #565761;
+    color: white;
+    width: 250px;
+    margin-top: 10px;
+}
+
+.demo:hover{
+    background-color: white;
+    color: #565761;
+    cursor: pointer;
+}
+
+.features-wrapper{
+    padding-top: 20px;
+    overflow: hidden;
+}
+
+.feature-background{
+    background-color: #F3F3F3;
+    height: 1000px;
+    width: 100%;
+    margin-top: 50px;
+    padding-top: 50px;
+    /* transform: rotate(-3deg) */
+}
+
+.reasons-wrapper {
+    margin-top: 80px;
+}
+
+.feature-container {
+    display: flex;
+    align-items: center;
+    margin-top: 50px; 
+}
+
+.feature-image {
+    height: 400px;
+}
+
+.feature-content {
+    padding: 0px 50px;
+    text-align: left;
+}
+
+.feature {
+    border: 1px solid #FFBD00;
+    background-color: #F3F3F3;
+    color: #FFBD00;
+    width: 350px;
+    height: 60px;
+    margin-top: 10px;
+    border-radius: 0px;
+}
+
+.feature:hover{
+    background-color: #FFBD00;
+    color: #565761;
+    cursor: pointer;
 }
