--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -173,11 +173,117 @@
     border-radius: 0px;
 }
 
-.reason:hover{
+.reason:hover {
     background-color: #FFBD00;
     color: #565761;
     cursor: pointer;
 }
+
+.reviews-wrapper {
+    overflow: hidden;
+    height: 450px;
+}
+
+.reviews-background {
+    position: relative;
+    top: -450px;
+    z-index: -1;
+    height: 450px;
+    background-image: url('https://images.unsplash.com/photo-1543945419-6c5119c392cd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80');
+    background-size: cover;
+    background-position: center center;
+}
+
+.reviews-overlay {
+    background-color: rgba(0,0,0,0.65);
+    height: 450px;
+    width: 100%;  
+    color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    height: 450px;
+    font-weight: lighter; 
+}
+
+.review-text {
+    padding: 0px 150px;
+}
+
+
+.register-home {
+    display: flex;
+    padding: 0px 50px;
+    margin-top: 50px;
+}
+
+.register-home-content {
+    margin: 30px;
+    text-align: center;
+}
+
+.register-reason {
+    display: flex;
+    align-items: center;
+    margin: 30px 0px;
+}
+
+.reg-image {
+    height: 70px;
+    padding-left: 20px;
+}
+
+.reg-text {
+    padding: 0px 30px;
+    text-align: left;
+}
+
+.home-form-container {
+    margin: 30px;
+    max-width: 400px;
+    min-width: 400px;
+    height: 650px;
+    box-shadow: 1px 1px 100px 1px #dddddd
+}
+
+.home-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.home-form-input {
+    margin: 15px;
+    height: 50px;
+    width: 300px;
+    font-size: 20px;
+}
+
+.form {
+    border: 1px solid #FFBD00;
+    background-color: #FFBD00;
+    color: #ffffff;
+    width: 300px;
+    height: 60px;
+    margin-top: 10px;
+    border-radius: 30px;
+    margin: 20px 0px;
+}
+
+.form:hover{
+    background-color: #ffffff;
+    color: #FFBD00;
+    cursor: pointer;
+}
+
+.terms {
+    margin: 10px 35px;
+    font-size: 10px;
+}
+
+
+
 
 .footer-main {
     display: flex;
