--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -79,10 +79,18 @@
     width:100%;
 }
 
+.screen {
+    height: 300px;
+    position: relative;
+    left: 125px;
+    padding-top: 50px; 
+}
+
 .comp {
     height: 350px;
-    position: relative;
-    left: 150px;
+    position: absolute;
+    top: 100px;
+    right: -200px;
     padding-top: 50px; 
 }
 
