content card components and styling completed

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -47,3 +47,9 @@
     font-size: 18px;
     font-weight: lighter;
 }
+
+.highlight {
+    font-size: 24px;
+    color: #FFBD00;
+    font-weight: bold;
+}
