--- a/src/components/Viewer/Viewer.css
+++ b/src/components/Viewer/Viewer.css
@@ -1,7 +1,15 @@
+.fixed-viewer {
+    position: fixed;
+    width: 100%;
+    background-color: #ffffff;
+}
+
 .viewer-header {
     background-color: #F3F3F3;
     padding: 0px 50px;
     height: 50px;
+    display: fixed;
+
 }
 
 .player-header {
@@ -24,6 +32,13 @@
     z-index: -1
 }
 
+.nav-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    height: 450px;
+}
+
 .player-nav {
     background: none;
     width: 60px;
@@ -41,4 +56,38 @@
     border: 1px solid #FFBD00;
     background-color: #ffffff;
     cursor: pointer
+}
+
+.center {
+    margin-bottom: 125px;
+}
+
+.lower {
+    font-size: 30px;
+    border: 1px solid #dddddd;
+    background-color: #dddddd
+}
+
+.player-footer {
+    margin-top: 10px;
+    padding: 0px 130px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    height: 20px;
+}
+
+.content-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    top: 620px;
+    z-index: -2;
+    width: 100%;
+}
+
+.content-body {
+    /* padding: 0px 50px; */
+    margin: 0px auto;
+    background-color: red;
 }
