--- a/src/components/Viewer/Viewer.css
+++ b/src/components/Viewer/Viewer.css
@@ -19,6 +19,10 @@
     justify-content: space-between;
 }
 
+.count {
+    padding: 0px 5px;
+}
+
 .player-container {
     padding: 0px 50px;
     display: flex;
