--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -76,21 +76,22 @@
 .content-body {
     text-align: left;
     padding-left: 80px;
-    width:100%;
+    width:160%;
+    max-width: 800px;
+    overflow: hidden;
 }
-
 .screen {
-    height: 300px;
+    height: 270px;
     position: relative;
-    left: 125px;
-    padding-top: 50px; 
+    left: 340px;
+    padding-top: 20px; 
 }
 
 .comp {
     height: 350px;
-    position: absolute;
-    top: 100px;
-    right: -200px;
+    position: relative;
+    top: 0px;
+    right: 200px;
     padding-top: 50px; 
 }
 
@@ -101,6 +102,10 @@
     width: 250px;
     margin-top: 10px;
 }
+/* 
+.content-image {
+    overflow: hidden;
+} */
 
 .demo:hover{
     background-color: white;
