--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -257,7 +257,8 @@
     max-width: 400px;
     min-width: 400px;
     height: 650px;
-    box-shadow: 1px 1px 100px 1px #dddddd
+    box-shadow: 1px 1px 100px 1px #dddddd;
+    background-color: #F3F3F3;
 }
 
 .home-form {
@@ -266,11 +267,21 @@
     align-items: center;
 }
 
-.home-form-input {
+.input-div{
     margin: 15px;
     height: 50px;
     width: 300px;
     font-size: 20px;
+    background-color: #ffffff;
+}
+
+.home-form-input {
+    margin-left: 10px;
+    height: 50px;
+    width: 250px;
+    font-size: 20px;
+    border: none;
+
 }
 
 .form {
