slide creator, database, and other slide functions created

--- a/src/components/Viewer/Viewer.css
+++ b/src/components/Viewer/Viewer.css
@@ -66,6 +66,12 @@
     margin-bottom: 125px;
 }
 
+.continue{
+    /* background-color: #5D91FD;
+    border: 1px solid #ffffff;
+    color: #ffffff; */
+}
+
 .lower {
     font-size: 30px;
     border: 1px solid #dddddd;
