--- a/src/components/ContentDisplay/ContentDisplay.css
+++ b/src/components/ContentDisplay/ContentDisplay.css
@@ -4,3 +4,21 @@
     justify-content: flex-start;
     width: 800px;
 }
+
+.add-content-wrapper {
+    background: none;
+    border: 1px solid #5D91FD;
+    border-radius: 25px;
+    margin: 10px;
+    box-shadow: 1px 1px 100px 5px #dddddd;
+    background-color: #5D91FD;
+    color: #ffffff;
+    width: 800px;
+    height: 50px;
+}
+
+.add-content-wrapper:hover {
+    cursor: pointer;
+    background-color: #ffffff;
+    color: #5D91FD
+}
