--- a/src/components/ContentDisplay/ContentDisplay.css
+++ b/src/components/ContentDisplay/ContentDisplay.css
@@ -1,7 +1,7 @@
 .contents-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
     width: 800px;
 }
 
@@ -11,14 +11,15 @@
     border-radius: 25px;
     margin: 10px;
     box-shadow: 1px 1px 100px 5px #dddddd;
-    background-color: #5D91FD;
-    color: #ffffff;
+    background-color: #ffffff;
+    color: #5D91FD;
     width: 800px;
     height: 50px;
 }
 
 .add-content-wrapper:hover {
     cursor: pointer;
-    background-color: #ffffff;
-    color: #5D91FD
+    background-color: #5D91FD;
+    color: #ffffff
 }
+
