--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -1,3 +1,5 @@
+@import './../variables';
+
 .proj-card-wrapper {
     margin: 10px;
     box-shadow: 1px 1px 100px 5px #dddddd;
@@ -19,11 +21,10 @@
     font-size: 24px;
     margin-bottom: 10px;
     width: 30px;
-}
-
-.proj-delete:hover {
-    cursor: pointer;
-    color: #FFBD00;
+    &:hover{
+        cursor: pointer;
+        color: $yellow;
+    }
 }
 
 .proj-card-input {
