home content update

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -161,6 +161,10 @@
 
 .reason-card {
     width: 280px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .reason-image {
