--- a/src/components/ContentModal/ContentModal.scss
+++ b/src/components/ContentModal/ContentModal.scss
@@ -40,6 +40,9 @@ select {
 .modal-upload-wrapper {
     width: 550px;
     height: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .modal-upload {
