styling updates to viewer

--- a/src/components/Viewer/Viewer.scss
+++ b/src/components/Viewer/Viewer.scss
@@ -1,7 +1,14 @@
 @import './../variables';
 
+.viewer-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .fixed-viewer {
     position: fixed;
+    top: 50px;
     width: 100%;
     background-color: #ffffff;
 }
@@ -12,7 +19,8 @@ h2 {
 
 .viewer-header {
     background-color: $light;
-    padding: 0px 50px;
+    margin: 0px 50px;
+    width: 90%;
     height: 50px;
     display: flex;
     justify-content: space-between;
@@ -21,10 +29,11 @@ h2 {
     background-color: #ffffff;
     z-index: 999;
     margin-bottom: 20px;
+    position: fixed;
 }
 
 .player-header {
-    padding: 0px 130px;
+    padding: 0px;
     margin: 0px auto;
     display: flex;
     justify-content: space-between;
@@ -85,7 +94,7 @@ h2 {
 
 .player-footer {
     margin: 10px auto 0px;
-    padding: 0px 130px;
+    padding: 0px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -113,12 +122,12 @@ h2 {
 }
 
 .content-container {
-    position: absolute;
+    position: relative;
     display: flex;
     justify-content: center;
-    top: 530px;
+    top: 520px;
     z-index: -2;
-    width: 100%;
+    width: 700px;
 }
 
 .card-content-body {
@@ -132,4 +141,22 @@ h2 {
         weight: lighter;
     }
     padding-left: 12px;
+}
+
+@media (min-width: 1500px) {
+    .viewer-wrapper {
+        flex-direction: row;
+        justify-content: center;
+    }
+    .content-container {
+        position: absolute;
+        top: 50px;
+        right: 150px;
+        
+    }
+    .fixed-viewer {
+        width: 700px;
+        background-color: #ffffff;
+        left:150px;
+    }
 }
