--- a/src/components/Viewer/Viewer.scss
+++ b/src/components/Viewer/Viewer.scss
@@ -11,6 +11,7 @@
     top: 50px;
     width: 100%;
     background-color: #ffffff;
+    z-index: 999
 }
 
 h2 {
@@ -19,7 +20,7 @@ h2 {
 
 .viewer-header {
     background-color: $light;
-    margin: 0px 50px;
+    padding: 0px 50px;
     width: 90%;
     height: 50px;
     display: flex;
@@ -126,7 +127,7 @@ h2 {
     display: flex;
     justify-content: center;
     top: 520px;
-    z-index: -2;
+    // z-index: -1;
     width: 700px;
 }
 
