--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -5,10 +5,9 @@
     box-shadow: 1px 1px 100px 5px #dddddd;
     width: 22%;
     min-width: 200px;
-}
-
-.proj-card-wrapper:hover {
-    cursor: pointer;
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 .proj-image {
