react chartjs doughnut added and styling fixed

--- a/src/components/Account/Account.scss
+++ b/src/components/Account/Account.scss
@@ -62,6 +62,20 @@ tr {
     margin: 50px;
 }
 
+.util-wrapper {
+    margin: 50px auto;
+    max-height: 450px;
+    max-width: 900px;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+}
+
+.util-doughnut {
+    height: 300px;
+    width: 100%;
+}
 
 .payment-summary {
     display: flex;
