--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -45,7 +45,7 @@ h1 {
     font-size: 20px;
     background: none;
     border: none;
-    padding-left: 15px;
+    padding: 0 8px;
     &:hover{
         cursor: pointer;
     }
