--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -18,7 +18,7 @@
     background: none;
     border: none;
     font-size: 24px;
-    margin-bottom: 10px;
+    margin: 10px 0;
     width: 30px;
     &:hover{
         cursor: pointer;
@@ -26,12 +26,26 @@
     }
 }
 
-.proj-card-input {
-    width: 80%
+
+.proj-inputs {
+    
+}
+
+p, select {
+    margin: 0;
 }
 
 .title-update-wrapper {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     padding: 5px 7px 10px;
+    background-color: $yellow;
 }
+
+.proj-card-input {
+    width: 90%;
+    height: 20px;
+    align-self: center;
+    margin: 5px;
+}
+
