channels creation and selection on product cards working

--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -11,7 +11,7 @@
 }
 
 .proj-image {
-    width: 100%
+    width: 100%;
 }
 
 .proj-delete {
@@ -31,9 +31,6 @@
     
 }
 
-p, select {
-    margin: 0;
-}
 
 .title-update-wrapper {
     display: flex;
