permissions table work save

--- a/src/components/Account/Account.scss
+++ b/src/components/Account/Account.scss
@@ -77,8 +77,8 @@ tr {
 
 .save-perm {
     position: absolute;
-    right: 0px;
-    top: 0px;
+    left: 2px;
+    top: -2px;
     background: none;
     height: 20px;
     font-size: 14px;
