--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -5,6 +5,7 @@
     box-shadow: 1px 1px 100px 5px #dddddd;
     width: 22%;
     min-width: 200px;
+    max-width: 200px;
     &:hover {
         cursor: pointer;
     }
