--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -6,8 +6,12 @@
     width: 22%;
     min-width: 200px;
     max-width: 200px;
+    transition: .5s;
     &:hover {
         cursor: pointer;
+        -webkit-transform: scale(1.1);
+        -ms-transform: scale(1.1);
+        transform: scale(1.1);
     }
 }
 
